disable following of symlinks per default for directory mode

add "symlinks" attribute to allow that again

BUG: 500892